--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ a,p,li,button{
 }
 header{
     display: flex;
-    justify-content:space-between;
+    justify-content:flex-end;
     align-items: center;
 }
 .logo{
@@ -19,6 +19,7 @@ header{
     cursor: pointer;
     letter-spacing: .2em;
     font-weight: bold;
+    margin-right: auto;
 }
 .nav_link li{
     list-style: none;
